<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench</name>
  <version>0.2.0</version>
  <description>Unofficial ROS 2 port of the dynamixel_workbench. 
  Originally developed by ROBOTIS, porting to ROS 2 Jazzy.</description>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="willson@robotis.com">Will Son</author>
  <maintainer email="hemand.sunny@zohointern.com">Hemand Sunny</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <exec_depend></exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
